test/parser.d/should_fail/statements2.souc.bad
main() = do
	print x
	++x
